--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -2,4 +2,8 @@ $red: #f8615a;
 .red {color: $red;}
 $white: #fff;
 .white {color: $white;}
-$blue: #043d76;
+$grey: #e5e5e5;
+.grey {color: $grey;}
+$lightgrey: #f7f7f7;
+.lightgrey {color: $lightgrey;}
+.bggrey {background-color: $grey;}
