--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -8,6 +8,12 @@ body {
     color: #333
 }
 
+h1 {
+    font-size: inherit;
+    margin: 0;
+    padding: 0;
+}
+
 a {
     color: inherit;
     cursor: pointer;
@@ -23,7 +29,7 @@ a {
 }
 
 p {
-    margin: 0 0 1em;
+    margin: 0;
 }
 
 button {
@@ -57,11 +63,6 @@ input[type="submit"]::-moz-focus-inner,
 select::-moz-focus-inner,
 input[type="file"]>input[type="button"]::-moz-focus-inner {
     outline: none !important;
-}
-
-@include placeholder {
-    color: #fff;
-    font-weight: 400;
 }
 
 a:hover {
@@ -104,6 +105,11 @@ input:focus {
     outline: none !important;
 }
 
+@include placeholder {
+    color: #999;
+    font-weight: 400;
+}
+
 input[type="checkbox"],
 input[type="radio"] {
     box-sizing: border-box;
@@ -136,36 +142,24 @@ li {
 }
 
 .input {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
-    border: 1px solid;
-    border-radius: 3px;
-    background: transparent;
+    border: 0;
+    border-radius: 0;
+    background: $lightgrey;
+    border: 1px solid $lightgrey;
     width: 100%;
     padding: 10px 20px;
 }
 
-.btn-submit {
-    @extend .input;
-    color: $red;
-    border-color: $red;
-    display: inline-block;
-    font-weight: 500;
-    transition: background .5s 0s, color .5s 0s;
-    max-width: 260px;
-    &:hover {
-        background: $red;
-        color: #000;
-    }
-}
-
+input[type=tel],
 input[type=text],
 input[type=email] {
     @extend .input;
 }
 
 input[type=submit] {
-    @extend .btn-submit;
+    // @extend .btn-submit;
 }
 
 .cf {
