--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -6,6 +6,7 @@ $m992-width: 992px;
 $m1024-width: 1024px;
 $m1200-width: 1200px;
 $m1400-width: 1400px;
+$m1920-width: 1921px;
 @mixin mn550 {
     @media (min-width: #{$m550-width}) {
         @content;
@@ -44,6 +45,12 @@ $m1400-width: 1400px;
 
 @mixin mn1400 {
     @media (min-width: #{$m1400-width}) {
+        @content;
+    }
+}
+
+@mixin mn1920 {
+    @media (min-width: #{$m1920-width}) {
         @content;
     }
 }
