--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -77,12 +77,12 @@ img {
 }
 
 .content {
-
     @include mn992 {
         margin-left: 300px;
     }
     &__inner {
         max-width: 1100px;
+        width: 100%;
         margin: 0 auto;
         padding-bottom: 30px;
         @include mn992 {
