--- a/css/main.css
+++ b/css/main.css
@@ -3028,6 +3028,7 @@ img.alignright {
     margin-left: 300px; } }
 .content__inner {
   max-width: 1100px;
+  width: 100%;
   margin: 0 auto;
   padding-bottom: 30px; }
   @media (min-width: 992px) {
@@ -3242,6 +3243,12 @@ img.alignright {
   .b-meta__icon {
     margin-left: 10px;
     margin-right: 5px; }
+    .b-meta__icon_flag {
+      display: inline-block;
+      vertical-align: middle;
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="10" viewBox="0 0 14 10"><defs><style>.cls-1 {fill: #f8615a; fill-rule: evenodd; } </style> </defs> <path d="M10.758,0.571 C10.537,0.214 10.095,-0.001 9.579,-0.001 L1.474,-0.001 C0.663,-0.001 -0.000,0.642 -0.000,1.428 L-0.000,8.571 C-0.000,9.356 0.663,9.999 1.474,9.999 L9.579,9.999 C10.095,9.999 10.537,9.785 10.758,9.428 L14.000,4.999 L10.758,0.571 ZM9.579,8.571 L1.474,8.571 L1.474,1.428 L9.579,1.428 L12.158,4.999 L9.579,8.571 Z" class="cls-1"/> </svg>') center no-repeat;
+      width: 14px;
+      height: 10px; }
 
 .portfolio {
   font-size: 0;
@@ -3325,5 +3332,97 @@ img.alignright {
     overflow: hidden; }
   .portfolio__img {
     display: block; }
+
+.case {
+  margin: 20px 0 40px; }
+  .case__item {
+    padding: 20px 0; }
+    @media (min-width: 768px) {
+      .case__item {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex; } }
+    .case__item_first {
+      padding-top: 0; }
+  @media (min-width: 768px) {
+    .case__txt {
+      flex-basis: 40%;
+      order: 1;
+      padding-left: 20px; } }
+  .case__img {
+    text-align: center; }
+    @media (min-width: 768px) {
+      .case__img {
+        flex-basis: 60%;
+        padding-top: 7px; } }
+  .case__title {
+    padding: 0;
+    margin-top: 0; }
+    @media (min-width: 768px) {
+      .case__title {
+        text-align: left; } }
+  .case__desc {
+    font-size: 16px;
+    margin: 20px 0;
+    line-height: 1.5; }
+  .case__task {
+    margin: 20px 0; }
+
+.case-task__title {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #666;
+  margin-bottom: 20px; }
+.case-task__body {
+  color: #333;
+  font-family: Georgia, Times, Times New Roman, serif;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 1.5; }
+  .case-task__body ::before {
+    content: '\201C';
+    font-size: 100px;
+    color: #f8615a;
+    float: left;
+    line-height: 30px;
+    font-style: normal;
+    font-weight: 700;
+    transform: translateY(30px);
+    margin-right: 20px; }
+
+.case-meta__item {
+  margin-bottom: 12px; }
+.case-meta__title {
+  color: #f8615a;
+  font-size: 11px;
+  margin-bottom: 5px; }
+.case-meta__caption {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: .5em; }
+.case-meta__icon_flag {
+  display: inline-block;
+  vertical-align: middle;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="10" viewBox="0 0 14 10"><defs><style>.cls-1 {fill: #f8615a; fill-rule: evenodd; } </style> </defs> <path d="M10.758,0.571 C10.537,0.214 10.095,-0.001 9.579,-0.001 L1.474,-0.001 C0.663,-0.001 -0.000,0.642 -0.000,1.428 L-0.000,8.571 C-0.000,9.356 0.663,9.999 1.474,9.999 L9.579,9.999 C10.095,9.999 10.537,9.785 10.758,9.428 L14.000,4.999 L10.758,0.571 ZM9.579,8.571 L1.474,8.571 L1.474,1.428 L9.579,1.428 L12.158,4.999 L9.579,8.571 Z" class="cls-1"/> </svg>') center no-repeat;
+  width: 14px;
+  height: 10px; }
+.case-meta__icon_watch {
+  display: inline-block;
+  vertical-align: middle;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: #f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M7.000,13.999 C3.150,13.999 -0.000,10.849 -0.000,6.999 C-0.000,3.149 3.150,-0.001 7.000,-0.001 C10.850,-0.001 14.000,3.149 14.000,6.999 C14.000,10.849 10.850,13.999 7.000,13.999 ZM7.000,1.400 C3.920,1.400 1.400,3.919 1.400,6.999 C1.400,10.079 3.920,12.599 7.000,12.599 C10.080,12.599 12.600,10.079 12.600,6.999 C12.600,3.919 10.080,1.400 7.000,1.400 ZM6.300,7.699 L6.300,3.499 L7.350,3.499 L7.350,7.139 L10.500,9.030 L9.940,9.940 L6.300,7.699 Z" class="cls-1"/></svg>') center no-repeat;
+  width: 14px;
+  height: 14px; }
+.case-meta__icon_share {
+  display: inline-block;
+  vertical-align: middle;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: #f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M11.601,9.123 C10.917,9.123 10.303,9.415 9.866,9.883 L4.765,7.342 C4.782,7.223 4.794,7.102 4.794,6.978 C4.794,6.856 4.783,6.738 4.766,6.622 L9.860,4.109 C10.297,4.580 10.915,4.876 11.601,4.876 C12.925,4.876 13.998,3.784 13.998,2.438 C13.998,1.091 12.925,0.000 11.601,0.000 C10.278,0.000 9.205,1.091 9.205,2.438 C9.205,2.559 9.216,2.677 9.233,2.793 L4.139,5.306 C3.702,4.835 3.085,4.540 2.398,4.540 C1.074,4.540 0.001,5.631 0.001,6.978 C0.001,8.324 1.074,9.415 2.398,9.415 C3.082,9.415 3.696,9.123 4.133,8.656 L9.234,11.196 C9.217,11.315 9.205,11.436 9.205,11.561 C9.205,12.907 10.278,13.998 11.601,13.998 C12.925,13.998 13.998,12.907 13.998,11.561 C13.998,10.214 12.925,9.123 11.601,9.123 Z" class="cls-1"/></svg>') center no-repeat;
+  width: 14px;
+  height: 14px; }
+.case-meta__body {
+  color: #999;
+  font-size: 13px; }
 
 /*# sourceMappingURL=main.css.map */
